--- a/story.html
+++ b/story.html
@@ -1,12 +1,12 @@
-<!-- story.html - نسخه حرفه‌ای و هماهنگ -->
+<!-- story.html - نسخه جدید و جذاب -->
 <section id="story" style="position:relative; background:hsl(0,0%,96%); font-family:'Vazirmatn','IBM Plex Sans',sans-serif; color:hsl(210,100%,20%); overflow:hidden; padding:6rem 1rem;">
 
-  <!-- پس‌زمینه نرم با نور -->
-  <div style="position:absolute; top:-100px; left:0; right:0; height:300px; background:linear-gradient(180deg, rgba(230,126,34,0.08), transparent); filter:blur(20px);"></div>
-  <div style="position:absolute; bottom:-150px; left:0; right:0; height:300px; background:linear-gradient(0deg, rgba(230,126,34,0.06), transparent); filter:blur(20px);"></div>
+  <!-- پس‌زمینه نرم و نورهای تزئینی -->
+  <div style="position:absolute; top:-120px; left:-50px; width:300px; height:300px; background:rgba(230,126,34,0.08); border-radius:50%; filter:blur(100px); animation:float 8s ease-in-out infinite;"></div>
+  <div style="position:absolute; bottom:-150px; right:-60px; width:350px; height:350px; background:rgba(27,79,52,0.06); border-radius:50%; filter:blur(120px); animation:float 7s ease-in-out infinite 1s;"></div>
 
   <div class="container" style="position:relative; z-index:2; max-width:1200px; margin:auto;">
-    
+
     <!-- عنوان -->
     <div style="text-align:center; margin-bottom:4rem; animation:fadeIn 1s ease-out forwards;">
       <h2 style="font-size:2.5rem; font-weight:700; margin-bottom:1rem; color:hsl(210,100%,20%);">داستان شروع و تجربه</h2>
@@ -14,254 +14,121 @@
     </div>
 
     <!-- توضیح اصلی -->
-    <div class="glass-card story-main fadeIn" style="padding:2rem; margin-bottom:4rem;">
+    <div class="glass-card story-main fadeIn" style="margin-bottom:4rem;">
       <p style="font-size:1.15rem; line-height:1.8; text-align:justify;">
         سهند رنجبری‌پور پس از مشاهده نیاز بازار به محصولات با کیفیت و دسترس‌پذیر، فعالیت خود را در زمینه تأمین ملزومات اداری و محصولات پت‌شاپ آغاز کرد. تجربه تولید داخلی و واردات مستقیم، پایه‌ای برای ارائه خدمات حرفه‌ای و قابل اعتماد شد.
       </p>
     </div>
 
-    <!-- Timeline حرفه‌ای -->
-    <!-- Timeline حرفه‌ای -->
-<div class="timeline">
-  <div class="line"></div>
+    <!-- مراحل موفقیت به صورت کارت افقی -->
+    <div class="milestones-container" style="display:flex; flex-wrap:wrap; justify-content:center; gap:2rem;">
 
-  <div class="milestone" style="--delay:0.1s">
-    <div class="circle">💡</div>
-    <div class="content glass-card">
-      <h3>شروع</h3>
-      <p>شناسایی نیاز بازار به محصولات با کیفیت</p>
+      <div class="milestone-card fadeIn" style="--delay:0.1s;">
+        <div class="icon-circle">💡</div>
+        <h3>شروع</h3>
+        <p>شناسایی نیاز بازار به محصولات با کیفیت</p>
+      </div>
+
+      <div class="milestone-card fadeIn" style="--delay:0.3s;">
+        <div class="icon-circle">📈</div>
+        <h3>رشد</h3>
+        <p>توسعه فعالیت در ملزومات اداری و پت‌شاپ</p>
+      </div>
+
+      <div class="milestone-card fadeIn" style="--delay:0.5s;">
+        <div class="icon-circle">🏆</div>
+        <h3>موفقیت</h3>
+        <p>ارائه خدمات حرفه‌ای و قابل اعتماد</p>
+      </div>
+
     </div>
+
   </div>
 
-  <div class="milestone" style="--delay:0.3s">
-    <div class="circle">📈</div>
-    <div class="content glass-card">
-      <h3>رشد</h3>
-      <p>توسعه فعالیت در ملزومات اداری و پت‌شاپ</p>
-    </div>
-  </div>
+  <!-- CSS مخصوص Story جدید -->
+  <style>
+    @keyframes fadeIn { from{opacity:0; transform:translateY(20px);} to{opacity:1; transform:translateY(0);} }
+    @keyframes float { 0%,100%{transform:translateY(0);} 50%{transform:translateY(-10px);} }
 
-  <div class="milestone" style="--delay:0.5s">
-    <div class="circle">🏆</div>
-    <div class="content glass-card">
-      <h3>موفقیت</h3>
-      <p>ارائه خدمات حرفه‌ای و قابل اعتماد</p>
-    </div>
-  </div>
-</div>
-
-<style>
-/* Timeline container */
-.timeline {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 4rem;
-  margin-top: 4rem;
-}
-
-/* خط عمودی */
-.timeline .line {
-  position: absolute;
-  top: 0;
-  left: 50%;
-  width: 4px;
-  height: 100%;
-  transform: translateX(-50%);
-  background: linear-gradient(180deg, hsl(27,79%,52%), hsl(210,100%,20%));
-  border-radius: 2px;
-  z-index:1;
-}
-
-/* Milestone */
-.milestone {
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-  opacity: 0;
-  transform: translateY(40px);
-  transition: all 0.6s ease;
-  max-width: 700px;
-  width: 100%;
-  z-index:2;
-}
-
-.milestone:nth-child(even) {
-  flex-direction: row-reverse;
-}
-
-.milestone .circle {
-  flex-shrink: 0;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  background: linear-gradient(135deg, hsl(27,79%,52%), hsl(27,79%,62%));
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 2.5rem;
-  color: white;
-  box-shadow: 0 5px 20px rgba(230,126,34,0.4);
-}
-
-.milestone .content {
-  padding: 1.5rem 2rem;
-  border-radius: 1rem;
-  background: rgba(255,255,255,0.85);
-  backdrop-filter: blur(15px);
-  box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.milestone .content:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 15px 35px rgba(230,126,34,0.3);
-}
-
-.milestone h3 {
-  font-size: 1.3rem;
-  font-weight: 700;
-  color: hsl(210,100%,20%);
-  margin-bottom: 0.5rem;
-}
-
-.milestone p {
-  font-size: 1rem;
-  line-height: 1.6;
-  color: hsl(210,30%,40%);
-}
-
-/* ریسپانسیو موبایل */
-@media(max-width:768px){
-  .timeline .line { left: 10px; transform: none; }
-  .milestone { flex-direction: row; justify-content: flex-start; }
-  .milestone:nth-child(even) { flex-direction: row; }
-  .milestone .content { text-align: right; }
-}
-    /* Timeline container */
-    .timeline {
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 4rem;
-      margin-top: 4rem;
+    .fadeIn {
+      animation:fadeIn 1s ease-out forwards;
+      opacity:0;
     }
 
-    /* خط عمودی */
-    .timeline .line {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 4px;
-      background: linear-gradient(180deg, hsl(27,79%,52%), hsl(210,100%,20%));
-      border-radius: 2px;
-      z-index: 0;
+    .glass-card {
+      background:rgba(255,255,255,0.85);
+      backdrop-filter:blur(15px);
+      border-radius:1rem;
+      padding:2rem;
+      box-shadow:0 10px 25px rgba(0,0,0,0.08);
+      transition:0.3s all;
+    }
+    .glass-card:hover { transform:translateY(-5px); box-shadow:0 15px 35px rgba(0,0,0,0.15); }
+
+    .milestones-container {
+      margin-top:2rem;
     }
 
-    /* Milestone */
-    .milestone {
-      position: relative;
-      display: flex;
-      align-items: center;
-      gap: 2rem;
-      opacity: 0;
-      transform: translateY(40px);
-      transition: all 0.6s ease;
-      max-width: 700px;
-      width: 100%;
-      z-index: 1;
+    .milestone-card {
+      background:rgba(255,255,255,0.8);
+      backdrop-filter:blur(15px);
+      border-radius:1rem;
+      padding:2rem 1.5rem;
+      width:250px;
+      text-align:center;
+      box-shadow:0 10px 25px rgba(0,0,0,0.08);
+      transition:0.3s all;
+      opacity:0;
+      transform:translateY(30px);
+    }
+    .milestone-card:hover { transform:translateY(-5px); box-shadow:0 15px 35px rgba(230,126,34,0.2); }
+
+    .icon-circle {
+      width:70px;
+      height:70px;
+      margin:0 auto 1rem auto;
+      border-radius:50%;
+      background:linear-gradient(135deg, hsl(27,79%,52%), hsl(27,79%,62%));
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-size:2rem;
+      color:white;
+      box-shadow:0 0 20px rgba(230,126,34,0.3);
+      animation:float 5s ease-in-out infinite;
     }
 
-    .milestone:nth-child(even) {
-      flex-direction: row-reverse;
+    .milestone-card h3 {
+      font-size:1.25rem;
+      font-weight:700;
+      margin-bottom:0.5rem;
     }
 
-    .milestone .circle {
-      flex-shrink: 0;
-      width: 80px;
-      height: 80px;
-      border-radius: 50%;
-      background: linear-gradient(135deg, hsl(27,79%,52%), hsl(27,79%,62%));
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 2.5rem;
-      color: white;
-      box-shadow: 0 5px 20px rgba(230,126,34,0.4);
+    .milestone-card p {
+      font-size:1rem;
+      color:hsl(210,30%,40%);
+      line-height:1.6;
     }
 
-    .milestone .content {
-      padding: 1.5rem 2rem;
-      border-radius: 1rem;
-      background: rgba(255,255,255,0.85);
-      backdrop-filter: blur(15px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .milestone .content:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 15px 35px rgba(230,126,34,0.3);
-    }
-
-    .milestone h3 {
-      font-size: 1.3rem;
-      font-weight: 700;
-      color: hsl(210,100%,20%);
-      margin-bottom: 0.5rem;
-    }
-
-    .milestone p {
-      font-size: 1rem;
-      line-height: 1.6;
-      color: hsl(210,30%,40%);
-    }
-
-    /* ریسپانسیو موبایل */
     @media(max-width:768px){
-      .timeline .line { left: 10px; transform: none; }
-      .milestone { flex-direction: row; justify-content: flex-start; }
-      .milestone:nth-child(even) { flex-direction: row; }
-      .milestone .content { text-align: right; }
+      .milestones-container { flex-direction:column; gap:1.5rem; }
+      .milestone-card { width:100%; text-align:right; }
     }
   </style>
 
+  <!-- JS مخصوص Story جدید -->
   <script>
-    // انیمیشن هنگام اسکرول
-    const milestones = document.querySelectorAll('.timeline .milestone');
+    const milestones = document.querySelectorAll('#story .milestone-card');
     const observer = new IntersectionObserver((entries)=>{
       entries.forEach(entry=>{
         if(entry.isIntersecting){
-          entry.target.style.opacity = '1';
-          entry.target.style.transform = 'translateY(0)';
-          entry.target.style.transitionDelay = entry.target.style.getPropertyValue('--delay') || '0s';
+          entry.target.style.opacity='1';
+          entry.target.style.transform='translateY(0)';
+          entry.target.style.transitionDelay = entry.target.style.getPropertyValue('--delay');
         }
       });
     }, {threshold:0.3});
     milestones.forEach(el => observer.observe(el));
   </script>
 
-<script>
-// انیمیشن هنگام اسکرول (با تاخیر CSS)
-function initTimelineAnimation() {
-  const milestones = document.querySelectorAll('#story .milestone');
-  const observer = new IntersectionObserver((entries)=>{
-    entries.forEach(entry=>{
-      if(entry.isIntersecting){
-        entry.target.style.opacity = '1';
-        entry.target.style.transform = 'translateY(0)';
-        entry.target.style.transitionDelay = entry.target.style.getPropertyValue('--delay') || '0s';
-      }
-    });
-  }, {threshold:0.3});
-  milestones.forEach(el => observer.observe(el));
-}
-
-// اجرا بعد از بارگذاری بخش از fetch
-document.addEventListener('DOMContentLoaded', initTimelineAnimation);
-</script>
 </section>
