--- a/story.html
+++ b/story.html
@@ -1,44 +1,48 @@
-<!-- story.html - نسخه هماهنگ و موبایل فرندلی -->
-<section id="story" style="position:relative; background:hsl(0,0%,96%); font-family:'Vazirmatn','IBM Plex Sans',sans-serif; color:hsl(210,100%,20%); overflow:hidden; padding:6rem 1rem;">
+<!-- story.html - نسخه کاملاً متفاوت و ریسپانسیو -->
+<section id="story" style="position:relative; background:hsl(0,0%,98%); font-family:'Vazirmatn','IBM Plex Sans',sans-serif; color:hsl(210,100%,20%); overflow:hidden; padding:6rem 1rem;">
 
-  <!-- پس‌زمینه نرم و نورهای تزئینی -->
-  <div style="position:absolute; top:-100px; left:-50px; width:250px; height:250px; background:rgba(230,126,34,0.08); border-radius:50%; filter:blur(100px); animation:float 8s ease-in-out infinite;"></div>
-  <div style="position:absolute; bottom:-120px; right:-60px; width:300px; height:300px; background:rgba(27,79,52,0.06); border-radius:50%; filter:blur(120px); animation:float 7s ease-in-out infinite 1s;"></div>
+  <!-- نورهای پس‌زمینه جادویی -->
+  <div style="position:absolute; top:-80px; left:-60px; width:200px; height:200px; background:rgba(230,126,34,0.07); border-radius:50%; filter:blur(120px); animation:float 12s ease-in-out infinite;"></div>
+  <div style="position:absolute; bottom:-100px; right:-50px; width:250px; height:250px; background:rgba(27,79,52,0.05); border-radius:50%; filter:blur(140px); animation:float 10s ease-in-out infinite 2s;"></div>
 
   <div class="container" style="position:relative; z-index:2; max-width:1200px; margin:auto;">
 
     <!-- عنوان بخش -->
-    <div style="text-align:center; margin-bottom:3rem; animation:fadeIn 1s ease-out forwards;">
-      <h2 style="font-size:2.5rem; font-weight:700; margin-bottom:1rem; color:hsl(210,100%,20%);">داستان ما</h2>
-      <div style="width:100px; height:4px; background:hsl(27,79%,52%); margin:0 auto; border-radius:1rem;"></div>
+    <div style="text-align:center; margin-bottom:3rem;">
+      <h2 style="font-size:2.5rem; font-weight:700; margin-bottom:1rem;">داستان ما به سبک جدید</h2>
+      <div style="width:80px; height:4px; background:hsl(27,79%,52%); margin:0 auto; border-radius:1rem;"></div>
     </div>
 
-    <!-- توضیح اصلی -->
-    <div class="glass-card story-main fadeIn" style="margin-bottom:4rem;">
-      <p style="font-size:1.1rem; line-height:1.7; text-align:justify;">
-        سهند رنجبری‌پور پس از مشاهده نیاز بازار به محصولات با کیفیت و دسترس‌پذیر، فعالیت خود را در زمینه تأمین ملزومات اداری و محصولات پت‌شاپ آغاز کرد. تجربه تولید داخلی و واردات مستقیم، پایه‌ای برای ارائه خدمات حرفه‌ای و قابل اعتماد شد.
-      </p>
-    </div>
+    <!-- توضیح کوتاه -->
+    <p class="fadeIn" style="text-align:center; font-size:1.1rem; max-width:700px; margin:auto; margin-bottom:3rem; line-height:1.7;">
+      مسیر ما از یک ایده کوچک آغاز شد و با تمرکز بر نیاز واقعی بازار، به یک تجربه حرفه‌ای و جادویی در تأمین محصولات با کیفیت تبدیل شد.
+    </p>
 
-    <!-- کارت‌های مراحل داستان -->
-    <div class="milestones-container">
+    <!-- کارت‌های شناور متفاوت -->
+    <div class="story-grid">
 
-      <div class="milestone-card fadeIn" style="--delay:0.1s;">
-        <div class="icon-circle">💡</div>
-        <h3>شروع</h3>
-        <p>شناسایی نیاز بازار و آغاز فعالیت با هدف ارائه محصولات با کیفیت</p>
+      <div class="story-card fadeIn" style="--delay:0.1s;">
+        <div class="story-icon">✨</div>
+        <h3>ایده نوآورانه</h3>
+        <p>شناسایی نیاز واقعی بازار و ایجاد راه‌حل‌های خلاقانه</p>
       </div>
 
-      <div class="milestone-card fadeIn" style="--delay:0.3s;">
-        <div class="icon-circle">🚀</div>
-        <h3>رشد</h3>
-        <p>گسترش فعالیت در ملزومات اداری و محصولات پت‌شاپ</p>
+      <div class="story-card fadeIn" style="--delay:0.3s;">
+        <div class="story-icon">🌱</div>
+        <h3>رشد پایدار</h3>
+        <p>توسعه محصولات و خدمات با تمرکز بر کیفیت و اعتماد</p>
       </div>
 
-      <div class="milestone-card fadeIn" style="--delay:0.5s;">
-        <div class="icon-circle">🏆</div>
-        <h3>موفقیت</h3>
-        <p>ارائه خدمات حرفه‌ای و قابل اعتماد برای کسب‌وکارها و فروشگاه‌ها</p>
+      <div class="story-card fadeIn" style="--delay:0.5s;">
+        <div class="story-icon">🏅</div>
+        <h3>موفقیت حرفه‌ای</h3>
+        <p>ارائه خدمات قابل اعتماد و تثبیت برند در بازار B2B</p>
+      </div>
+
+      <div class="story-card fadeIn" style="--delay:0.7s;">
+        <div class="story-icon">💎</div>
+        <h3>تجربه جادویی</h3>
+        <p>خلق تجربه‌ای حرفه‌ای و جذاب برای مشتریان و فروشگاه‌ها</p>
       </div>
 
     </div>
@@ -47,79 +51,70 @@
 
   <!-- CSS -->
   <style>
+    @keyframes float { 0%,100%{transform:translateY(0);} 50%{transform:translateY(-10px);} }
     @keyframes fadeIn { from {opacity:0; transform:translateY(20px);} to {opacity:1; transform:translateY(0);} }
-    @keyframes float { 0%,100% {transform:translateY(0);} 50% {transform:translateY(-10px);} }
 
     .fadeIn { animation:fadeIn 1s ease-out forwards; opacity:0; }
 
-    .glass-card {
-      background:rgba(255,255,255,0.85);
-      backdrop-filter:blur(15px);
-      border-radius:1rem;
-      padding:1.5rem 1.5rem;
-      box-shadow:0 10px 25px rgba(0,0,0,0.08);
-      transition:0.3s all;
-    }
-    .glass-card:hover { transform:translateY(-5px); box-shadow:0 15px 35px rgba(0,0,0,0.15); }
-
-    .milestones-container {
-      display:flex;
-      flex-wrap:wrap;
-      justify-content:center;
+    .story-grid {
+      display:grid;
+      grid-template-columns:repeat(auto-fit, minmax(220px,1fr));
       gap:2rem;
-      margin-top:2rem;
+      align-items:start;
     }
 
-    .milestone-card {
+    .story-card {
       background:linear-gradient(135deg, hsl(27,79%,52%), hsl(27,79%,60%));
       color:hsl(0,0%,98%);
+      padding:2rem 1.5rem;
       border-radius:1rem;
-      padding:1.8rem 1.5rem;
-      width:250px;
       text-align:center;
       box-shadow:0 10px 25px rgba(0,0,0,0.1);
-      transition:0.3s all;
-      opacity:0;
-      transform:translateY(30px);
+      transition:transform 0.3s ease, box-shadow 0.3s ease;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:flex-start;
     }
-    .milestone-card:hover {
-      transform:translateY(-6px);
+
+    .story-card:hover {
+      transform:translateY(-8px) scale(1.03);
       box-shadow:0 15px 35px rgba(230,126,34,0.25);
       background:linear-gradient(135deg, hsl(27,79%,58%), hsl(27,79%,65%));
     }
 
-    .icon-circle {
+    .story-icon {
+      font-size:2.5rem;
       width:70px;
       height:70px;
-      margin:0 auto 1rem auto;
-      border-radius:50%;
       background:linear-gradient(135deg, hsl(210,100%,20%), hsl(27,79%,52%));
+      border-radius:50%;
       display:flex;
       align-items:center;
       justify-content:center;
+      margin-bottom:1rem;
       box-shadow:0 0 20px rgba(230,126,34,0.3);
-      font-size:2rem;
       animation:float 5s ease-in-out infinite;
     }
 
-    .milestone-card h3 { font-size:1.2rem; font-weight:700; margin-bottom:0.5rem; }
-    .milestone-card p { font-size:0.95rem; line-height:1.6; }
+    .story-card h3 { font-size:1.2rem; margin-bottom:0.5rem; font-weight:700; }
+    .story-card p { font-size:0.95rem; line-height:1.6; }
 
+    /* ریسپانسیو */
     @media(max-width:768px){
-      .milestones-container { flex-direction:column; gap:1.5rem; }
-      .milestone-card { width:100%; text-align:right; }
-      .glass-card { padding:1rem 1rem; }
-      .milestone-card h3 { font-size:1.1rem; }
-      .milestone-card p { font-size:0.9rem; }
-      .icon-circle { width:60px; height:60px; font-size:1.5rem; }
+      .story-grid { grid-template-columns:1fr; gap:1.5rem; }
+      .story-card { padding:1.5rem 1rem; text-align:right; }
+      .story-icon { width:60px; height:60px; font-size:2rem; }
+      .story-card h3 { font-size:1.1rem; }
+      .story-card p { font-size:0.9rem; }
     }
   </style>
 
   <!-- JS -->
   <script>
-    const milestones = document.querySelectorAll('#story .milestone-card');
-    const observer = new IntersectionObserver((entries)=>{
-      entries.forEach(entry=>{
+    const storyCards = document.querySelectorAll('#story .story-card');
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
         if(entry.isIntersecting){
           entry.target.style.opacity='1';
           entry.target.style.transform='translateY(0)';
@@ -127,7 +122,7 @@
         }
       });
     }, {threshold:0.3});
-    milestones.forEach(el => observer.observe(el));
+    storyCards.forEach(card => observer.observe(card));
   </script>
 
 </section>
