--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="nav-links">
       <a href="#hero">خانه</a>
       <a href="#introduction">معرفی</a>
-      <a href="#story">داستان</a>
+      <a href="#newsbutton">معرفی</a>
       <a href="#office">ملزومات اداری</a>
       <a href="#petshop">پت‌شاپ</a>
       <a href="#philosophy">فلسفه کاری</a>
@@ -202,9 +202,12 @@ loadSection('story', '/story.html');
 loadSection('office', '/office.html');
 loadSection('petshop', '/petshop.html');
 loadSection('philosophy', '/philosophy.html');
+loadSection('newsbutton', '/newsbutton.html');
 loadSection('bio', '/bio.html');
 loadSection('footer', '/footer.html');
 
   </script>
+dEventListener('DOMContentLoaded', loadNewsButton);
+</script>
 </body>
 </html>
