--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <main>
     <div id="hero"></div>
     <div id="introduction"></div>
-    <div id="story"></div>
+    <div id="newsbutton"></div>
     <div id="office"></div>
     <div id="petshop"></div>
     <div id="philosophy"></div>
