--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div class="nav-links">
       <a href="#hero">خانه</a>
       <a href="#introduction">معرفی</a>
-      <a href="#newsbutton">معرفی</a>
+      <a href="#newsButton">معرفی</a>
       <a href="#office">ملزومات اداری</a>
       <a href="#petshop">پت‌شاپ</a>
       <a href="#philosophy">فلسفه کاری</a>
@@ -165,7 +165,7 @@
   <main>
     <div id="hero"></div>
     <div id="introduction"></div>
-    <div id="newsbutton"></div>
+    <div id="newsButton"></div>
     <div id="office"></div>
     <div id="petshop"></div>
     <div id="philosophy"></div>
@@ -202,7 +202,7 @@ loadSection('story', '/story.html');
 loadSection('office', '/office.html');
 loadSection('petshop', '/petshop.html');
 loadSection('philosophy', '/philosophy.html');
-loadSection('newsbutton', '/newsbutton.html');
+loadSection('newsButton', '/newsButton.html');
 loadSection('bio', '/bio.html');
 loadSection('footer', '/footer.html');
 
