--- a/newsButton.html
+++ b/newsButton.html
@@ -4,13 +4,13 @@
     اینجا می‌توانید مقالات ما را بخوانید و با محصولات تامین‌شده در ایران آشنا شوید
   </p>
   <a href="news.html" target="_self">
-    <button class="btn-primary-3d">
+    <button class="btn-news-minimal">
       مشاهده اخبار و مقالات
     </button>
   </a>
 </div>
 
-<!-- CSS حرفه‌ای دکمه -->
+<!-- CSS دکمه مینیمال -->
 <style>
 .news-button-section {
   text-align:center;
@@ -20,39 +20,39 @@
 .button-info {
   font-size:1.1rem;
   color:hsl(210,30%,40%);
-  margin-bottom:1.5rem;
+  margin-bottom:1.2rem;
   max-width:600px;
   margin-left:auto;
   margin-right:auto;
+  line-height:1.6;
 }
 
-.btn-primary-3d {
-  background: linear-gradient(145deg, hsl(27,79%,52%), hsl(27,79%,45%));
+.btn-news-minimal {
+  background:hsl(27,79%,52%);
   color:hsl(0,0%,98%);
-  padding:1rem 2rem;
-  font-size:1.15rem;
-  font-weight:700;
+  padding:0.85rem 2rem;
+  font-size:1.1rem;
+  font-weight:600;
   border:none;
-  border-radius:1rem;
+  border-radius:0.5rem;
   cursor:pointer;
-  box-shadow: 0 6px 0 hsl(27,79%,38%), 0 10px 20px rgba(0,0,0,0.15);
-  transition: all 0.3s ease;
-  position:relative;
+  transition: all 0.25s ease;
+  box-shadow:0 3px 8px rgba(0,0,0,0.1);
 }
 
-.btn-primary-3d:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 12px 0 hsl(27,79%,38%), 0 15px 25px rgba(0,0,0,0.2);
-  background: linear-gradient(145deg, hsl(27,79%,58%), hsl(27,79%,50%));
+.btn-news-minimal:hover {
+  background:hsl(27,79%,58%);
+  transform:translateY(-2px);
+  box-shadow:0 6px 15px rgba(0,0,0,0.15);
 }
 
-.btn-primary-3d:active {
-  transform: translateY(2px);
-  box-shadow: 0 3px 0 hsl(27,79%,38%), 0 6px 10px rgba(0,0,0,0.15);
+.btn-news-minimal:active {
+  transform:translateY(1px);
+  box-shadow:0 2px 6px rgba(0,0,0,0.1);
 }
 
 @media(max-width:768px){
-  .btn-primary-3d { width:80%; font-size:1rem; padding:0.9rem 1.5rem; }
+  .btn-news-minimal { width:80%; font-size:1rem; padding:0.75rem 1.5rem; }
   .button-info { font-size:1rem; }
 }
 </style>
