--- a/index.html
+++ b/index.html
@@ -9,19 +9,11 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <style>
-    /* 🌈 سیستم رنگ و طراحی - مطابق فایل اصلی React/Tailwind */
     :root {
       --background: hsl(0, 0%, 96%);
       --foreground: hsl(210, 100%, 20%);
-      --card: hsl(0, 0%, 100%);
       --accent: hsl(27, 79%, 52%);
       --accent-hover: hsl(27, 79%, 58%);
-      --accent-foreground: hsl(0, 0%, 98%);
-      --primary: hsl(210, 100%, 20%);
-      --primary-hover: hsl(210, 100%, 25%);
-      --primary-foreground: hsl(0, 0%, 98%);
-      --muted: hsl(0, 0%, 93%);
-      --border: hsl(0, 0%, 89%);
       --radius: 0.75rem;
       --transition-smooth: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
@@ -32,22 +24,15 @@
       background: var(--background);
       color: var(--foreground);
       -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
       overflow-x: hidden;
     }
 
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 1rem;
-    }
+    .container { max-width: 1200px; margin: 0 auto; padding: 0 1rem; }
 
     /* ناوبری */
     nav {
       position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
+      top: 0; left: 0; right: 0;
       z-index: 50;
       display: flex;
       justify-content: space-between;
@@ -55,10 +40,9 @@
       padding: 1rem 2rem;
       background: rgba(255, 255, 255, 0.95);
       backdrop-filter: blur(10px);
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
       transition: var(--transition-smooth);
     }
-
     nav a {
       text-decoration: none;
       color: var(--foreground);
@@ -67,85 +51,78 @@
       position: relative;
       transition: var(--transition-smooth);
     }
-
-    nav a:hover {
-      color: var(--accent);
-    }
-
+    nav a:hover { color: var(--accent); }
     nav a::after {
       content: '';
       position: absolute;
-      bottom: -4px;
-      left: 0;
-      width: 0%;
-      height: 2px;
+      bottom: -4px; left: 0;
+      width: 0%; height: 2px;
       background: var(--accent);
       transition: width var(--transition-smooth);
     }
+    nav a:hover::after { width: 100%; }
+    .nav-logo { font-weight: 700; font-size: 1.5rem; color: var(--foreground); }
 
-    nav a:hover::after {
-      width: 100%;
-    }
-
-    .nav-logo {
-      font-weight: 700;
-      font-size: 1.5rem;
-      color: var(--primary);
-    }
-
-    /* برای حالت موبایل */
+    /* موبایل */
     @media (max-width: 768px) {
-      nav {
-        flex-wrap: wrap;
-      }
+      nav { flex-wrap: wrap; }
       .nav-links {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        text-align: right;
+        display: none; flex-direction: column; width: 100%; text-align: right;
       }
       .nav-links.active {
         display: flex;
         background: rgba(255,255,255,0.98);
         padding: 1rem;
-        border-top: 1px solid var(--border);
+        border-top: 1px solid #eee;
       }
-      .menu-toggle {
-        display: block;
-        cursor: pointer;
-        font-size: 1.5rem;
-      }
+      .menu-toggle { display: block; cursor: pointer; font-size: 1.5rem; }
+    }
+    @media (min-width: 769px) { .menu-toggle { display: none; } }
+
+    main { margin-top: 80px; }
+    section { min-height: 60vh; padding: 4rem 0; }
+
+    /* 🌙 Loader */
+    #loader {
+      position: fixed;
+      inset: 0;
+      background: linear-gradient(135deg, hsl(210,100%,20%), hsl(210,100%,30%));
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      z-index: 9999;
+      color: hsl(0,0%,98%);
+      font-weight: 600;
+      font-size: 1.3rem;
+      letter-spacing: 0.5px;
+      transition: opacity 0.5s ease;
     }
 
-    @media (min-width: 769px) {
-      .menu-toggle {
-        display: none;
-      }
+    .loader-circle {
+      width: 60px;
+      height: 60px;
+      border: 4px solid rgba(255,255,255,0.3);
+      border-top-color: hsl(27,79%,52%);
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin-bottom: 1rem;
     }
 
-    /* 🌀 انیمیشن‌های عمومی */
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .fade-in {
-      animation: fadeIn 0.8s ease-out forwards;
-    }
-
-    /* محل بارگذاری بخش‌ها */
-    main {
-      margin-top: 80px;
-    }
-
-    section {
-      min-height: 60vh;
-      padding: 4rem 0;
+    @keyframes spin {
+      from { transform: rotate(0deg); }
+      to { transform: rotate(360deg); }
     }
   </style>
 </head>
 
 <body>
+  <!-- ⏳ Loader -->
+  <div id="loader">
+    <div class="loader-circle"></div>
+    <div>در حال بارگذاری Sahand Apex...</div>
+  </div>
+
   <!-- 🚀 ناوبری -->
   <nav>
     <div class="nav-logo">Sahand Apex</div>
@@ -153,61 +130,60 @@
     <div class="nav-links">
       <a href="#hero">خانه</a>
       <a href="#introduction">معرفی</a>
-      <a href="#newsButton">معرفی</a>
-      <a href="#office">ملزومات اداری</a>
+      <a href="#story">داستان</a>
+      <a href="#office">اداری</a>
       <a href="#petshop">پت‌شاپ</a>
-      <a href="#philosophy">فلسفه کاری</a>
+      <a href="#philosophy">فلسفه</a>
       <a href="#bio">درباره</a>
     </div>
   </nav>
 
-  <!-- 📦 محل Inject هر بخش -->
   <main>
     <div id="hero"></div>
     <div id="introduction"></div>
+    <div id="story"></div>
     <div id="office"></div>
     <div id="petshop"></div>
     <div id="philosophy"></div>
-    <div id="newsButton"></div>
     <div id="bio"></div>
     <div id="footer"></div>
   </main>
 
-  <!-- ⚙️ اسکریپت اصلی برای لود کردن هر بخش -->
   <script>
     // منوی موبایل
     const toggle = document.querySelector('.menu-toggle');
     const navLinks = document.querySelector('.nav-links');
-    toggle.addEventListener('click', () => {
-      navLinks.classList.toggle('active');
-    });
+    toggle.addEventListener('click', () => navLinks.classList.toggle('active'));
 
-    // تابع بارگذاری سکشن‌ها
+    // بارگذاری هر بخش
     async function loadSection(id, path) {
       const container = document.getElementById(id);
       try {
         const response = await fetch(path);
         const html = await response.text();
         container.innerHTML = html;
-      } catch (err) {
+      } catch {
         container.innerHTML = "<p style='color:red;text-align:center;'>خطا در بارگذاری بخش " + id + "</p>";
       }
     }
 
-    // لود بخش‌ها
-// 🚀 لود بخش‌ها (نسخه مخصوص GitHub Pages)
-loadSection('hero', '/hero.html');
-loadSection('introduction', '/introduction.html');
-loadSection('story', '/story.html');
-loadSection('office', '/office.html');
-loadSection('petshop', '/petshop.html');
-loadSection('philosophy', '/philosophy.html');
-loadSection('newsButton', '/newsButton.html');
-loadSection('bio', '/bio.html');
-loadSection('footer', '/footer.html');
+    const sections = [
+      ['hero','hero.html'],
+      ['introduction','introduction.html'],
+      ['story','story.html'],
+      ['office','office.html'],
+      ['petshop','petshop.html'],
+      ['philosophy','philosophy.html'],
+      ['bio','bio.html'],
+      ['footer','footer.html']
+    ];
 
+    Promise.all(sections.map(([id, path]) => loadSection(id, path))).then(()=>{
+      // وقتی همه سکشن‌ها بارگذاری شدن، Loader رو حذف کن
+      const loader = document.getElementById('loader');
+      loader.style.opacity = '0';
+      setTimeout(()=>loader.remove(), 600);
+    });
   </script>
-dEventListener('DOMContentLoaded', loadNewsButton);
-</script>
 </body>
 </html>
