--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sahand Apex</title>
+<!-- 🧩 Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="wallpaper.png">
+<link rel="apple-touch-icon" href="wallpaper.png">
+<meta name="theme-color" content="#1b4f34">
 
   <!-- فونت‌ها -->
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600;700&family=Vazirmatn:wght@400;500;600;700&display=swap" rel="stylesheet">
